# aws-lambda-benchmarks

./: README.md  durations.txt  package.json
aws-lambda-compute-pi/: .gitignore
aws-lambda-compute-pi-java/: pom.xml
aws-lambda-compute-pi-java/src/test/java/dev/ervinszilagyi/handler/: PIGeneratorTest.java
aws-lambda-compute-pi-js/: Dockerfile  app.js
aws-lambda-compute-pi-js-with-rs/: .gitignore  Dockerfile_arm  Dockerfile_x86_64  app.js  package-lock.json  package.json
aws-lambda-compute-pi-python/: .dockerignore  Dockerfile  Dockerfile-alpine  Dockerfile-distroless  main.py  requirements.txt
aws-lambda-compute-pi-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile-arm64  Dockerfile-chainguard-glibc-arm64  Dockerfile-chainguard-glibc-x86  Dockerfile-chainguard-musl-arm64  Dockerfile-chainguard-musl-x86  Dockerfile-chainguard-x86  Dockerfile-distroless-arm64  Dockerfile-distroless-glibc-arm64  Dockerfile-distroless-glibc-x86  Dockerfile-distroless-musl-arm64  Dockerfile-distroless-musl-x86  Dockerfile-distroless-x86  Dockerfile-scratch-arm64  Dockerfile-scratch-x86  Dockerfile-x86  Dockerfile-x86-64  README.md  build.sh
aws-lambda-compute-pi-rs/src/: main.rs
aws-lambda-compute-pi/src/main/java/dev/ervinszilagyi/handler/: Handler.java  PIGenerator.java
compute-pi-rs-lib/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
compute-pi-rs-lib/src/: lib.rs
graphs/: durations-js.json  durations-rs.json  durations.json  main.py  startup-js.json  startup-rs-distroless.json  startup-rs.json
(+1 files in other folders)
