[package]
name = "aws-lambda-compute-pi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.13.0"
serde = "^1.0.217"
serde_json = "^1.0.135"
serde_derive = "^1.0.217"
tokio = { version = "1.43.0", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[[bin]]
name = "bootstrap"
path = "src/main.rs"