[package]
name = "compute-pi-rs-lib"
version = "0.1.0"
authors = ["Ervin Szilagyi"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
